# kprpo_lr1

./: .gitignore  CMakeLists.txt  README.md  bookdelegate.cpp  bookdelegate.hpp  bookwidget.cpp  bookwidget.hpp  bookwidget.ui  init.cpp  init.hpp  issuewidget.cpp  issuewidget.hpp  issuewidget.ui  loginwidget.cpp  loginwidget.hpp  loginwidget.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  messagehandler.hpp  tableeditor.cpp  tableeditor.hpp
migrations/: 2021_04_17_15_20_22_schema_init.sql  2021_04_17_15_22_48_data_init.sql  2021_04_17_18_13_03_add_operators.sql
